# Tobii-I-VT-Filter-Reconstruction

./: .dockerignore  .gitignore  .~lock.IVT30_40ivt.tsv#  .~lock.IVT30_4ivt.tsv#  .~lock.IVT30_ivt.tsv#  .~lock.ivt_normal_with_velocity.tsv#  CHANGELOG.md  CLEANUP.md  Dockerfile  I-VT-frequency120Fixation export with_velocity_ivt_eval.tsv  I-VT-frequency120Fixation export_input.tsv  I-VT-normal Data export_short.tsv  I-VT-rightEye Data export_short.tsv  README.md  analysis.py  analysis_C5_findings.md  analysis_MA_findings.md  constraints-dev.txt  converter.py  domain.py  example_experiment_tracking.py  example_sample_based_window.py  example_simple_usage.py  example_window_sweep.py  extractor.py  ivt_normal_with_velocity_ivt_eval.tsv  ivt_velocity.py  missmatch.ipynb  mypy.ini  pyproject.toml  pytest.ini  quick_window_test.py  requirements.txt  setup.py  test_discard_short_fixations_gt.py  test_simple_api.py  unstimmigkeiten_zeilen.txt  velocity.py
app/: calc.py  main.py
docs/: INDEX.md  QUICK_REFERENCE.md  TECHNICAL_SPECIFICATION.md  architecture.md  branch-protection.md  complete_architecture.md  experiment_tracking.md  parallelization_guide.md  refactoring_summary.md  reproducibility.md  user_guide.md  velocity-refinement.md  window_sizing_guide.md
examples/: velocity_comparison.py
ivt/: __init__.py  analyzer.py  classifier.py  cli.py  combiner.py  config.py  extractor.py  geometry.py  metrics.py  velocity.py
ivt_filter/: __init__.py  _optional_dependencies.py  classification.py  cli.py  config.py  config_builder.py  coordinate_rounding.py  engine.py  evaluation.py  experiment.py  gaze.py  io.py  observers.py  pipeline.py  plotting.py  postprocess.py  sampling.py  simple_api.py  smoothing_strategy.py  velocity.py  velocity_calculation.py  velocity_computer.py  velocity_parallel.py  window_rounding.py  window_utils.py  windowing.py
matplotlib/: __init__.py  pyplot.py
notebooks/: gazetoolkit_evaluation.ipynb  missmatch.ipynb  velocity_methods_demo.ipynb
old_scripts/: analyze_demo3.py  analyze_evaluation.py  analyze_eyesnotfound.py  debug_pipeline.py  translate_comments.py
requirements/: build.txt  development.txt  runtime.txt
scripts/: _debug_metrics.py  analyse_anomalies.py  batch_extract_study_a1.py  (+3 more)
(+125 files in other folders)
