[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tobii-ivt-filter"
version = "0.1.0"
description = "From-scratch Python implementation of Tobii's I-VT velocity-threshold filter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "cemGr" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.urls]
Homepage = "https://github.com/cemGr/Tobii-I-VT-Filter-Reconstruction"

[project.optional-dependencies]
plot = [
    "matplotlib>=3.5",
]
parallel = [
    "joblib>=1.1",
]
development = [
    "pytest>=8.4,<9",
]

[tool.setuptools.packages.find]
exclude = ["tests", "examples", "experiments", "notebooks"]
