[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tobii-ivt-filter"
version = "0.1.0"
description = "From-scratch Python implementation of Tobii's I-VT velocity-threshold filter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "cemGr" },
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
parallel = ["joblib>=1.1"]

[project.urls]
Homepage = "https://github.com/cemGr/Tobii-I-VT-Filter-Reconstruction"
Repository = "https://github.com/cemGr/Tobii-I-VT-Filter-Reconstruction"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "experiments*", "notebooks*"]
